[fixed]
- Panel was very far down the page (about an inch of the bottom of the screen)
- There was a slight horizontal screen (i.e. horizontal scroll bar showing) for some reason
- The spacing between the red error box and the login text was a bit too big
- ^ Same for the "Hello XYZ" and the form instruction
- Put "Hello XYZ" inside on the alert boxes, but with `info` class instead of `danger`
- The bug with having to click button several times is fixed

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -37,8 +37,12 @@ div.multi-select-box {
 
 /* login page */
 
+body {
+    overflow: hidden;
+}
+
 .login-panel {
-    margin-top: 50%;
+    margin-top: 23%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -47,6 +51,7 @@ div.multi-select-box {
 
 .login-panel-heading {
     text-align:center;
+    margin-bottom: 10px;
 }
 
 .login-field {
@@ -58,7 +63,6 @@ div.multi-select-box {
 
 .login-label {
     /* display: table-cell; */
-    margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 2.5%;
 }
@@ -69,7 +73,7 @@ div.multi-select-box {
     text-align: right;
 }
 
-.login-alert {
+.login-message {
     margin-left: 2.5%;
     margin-right: 2.5%;
 }
